--- a/project.html
+++ b/project.html
@@ -9,18 +9,18 @@
         .open {list-style-type: disclosure-open;}
         .circle {list-style-type: circle;}
         .circle span {width: 200px; display: inline-table;}
-        #path {position: fixed; right: 0; bottom: 0;padding: 20px;background: white;border: black solid 1px;text-align: right;}
+        #path_div {position: fixed; right: 0; bottom: 0;padding: 20px;background: white;border: black solid 1px;text-align: right;}
     </style>
 </head>
 <body>
-    <input type="file" id="file1" />
-    <button onclick="LoadFile()">Load</button>
+    <input style="display:none;" type="file" id="file1" onchange="LoadFile()"/>
+    <button onclick="file1.click()">Load</button>
     <input type="text" id="search"></input>
     <button id="search-btn">Search</button>
     <div id="jstree1">
         <div id="jstree"></div>
     </div>
-    <div id="path">/path</div>
+    <div id="path_div">/path_div</div>
 </body>
 
 <script>
@@ -40,34 +40,10 @@
         for (let ins in inss) {
             var val = "";
             if (!isNaN(Object.keys(inss[ins])[0])) {
-                val = Object.keys(inss[ins]).reduce(function(sum, key) {
-                    return sum | BigInt(inss[ins][key]) << BigInt(key);
-                }, BigInt(0));
-                var len = Object.keys(inss[ins]).length;
-                var minKey = 0;
-                var maxKey = 0;
-                var first = true;
-                for (let key in inss[ins]) {
-                    var keyInt = parseInt(key);
-                    if (first) {
-                        minKey = keyInt;
-                        maxKey = keyInt;
-                    }
-                    first = false;
-                    if (keyInt > maxKey) {
-                        maxKey = keyInt;
-                    }
-                    if (keyInt < minKey) {
-                        minKey = keyInt;
-                    }
-                }
                 var userData = {
-                    value: len+"'h"+val.toString(16),
-                    minMax: '['+minKey+"'"+maxKey+']',
+                    value: inss[ins],
+                    minMax: 'XXX',
                     val10: val.toString(10),
-                    raw: inss[ins],
-                    minKey: minKey,
-                    maxKey: maxKey
                 };
                 data.push({text: ins, icon: "jstree-file", data: userData});
             } else {
@@ -95,18 +71,7 @@
         tree.on('select_node.jstree', function(e, data) {
             var path = $("#jstree").jstree(true).get_path(data.node, "/");
             var val10 = data.node.data.val10;
-            var raw = ""
-            if (data.node.data.raw != null) {
-                for (var k = data.node.data.minKey; k <= data.node.data.maxKey; k++) {
-                    var key = k.toString();
-                    var apd = data.node.data.raw[key];
-                    if (apd == null) {
-                        apd = "X";
-                    }
-                    raw = apd + raw;
-                }
-            }
-            $("#path").html(path + "<br>" + val10 + "<br>" + raw);
+            $("#path_div").html(path + "<br>" + val10);
         })
         $("div#jstree").jstree({
             plugins: ["themes","json","grid","dnd","contextmenu","search","sort"],
