--- a/project.html
+++ b/project.html
@@ -41,8 +41,8 @@
             var val = "";
             if (!isNaN(Object.keys(inss[ins])[0])) {
                 var userData = {
-                    value: inss[ins][0],
-                    minMax: inss[ins][1],
+                    redmine_id: inss[ins][0],
+                    priority: inss[ins][1],
                     val10: inss[ins][1],
                 };
                 data.push({text: ins, icon: "jstree-file", data: userData});
@@ -81,8 +81,8 @@
             grid: {
                 columns: [
                     {width: "auto", header: "Nodes",title:"_DATA_"},
-                    {width: 110, cellClass: "col1", value: "value", header: "Value", title:"value", valueClass:"spanclass"},
-                    {width: 110, cellClass: "col1", value: "minMax", header: "[start'end]", title:"minMax", valueClass:"spanclass"},
+                    {width: 110, cellClass: "col1", value: "redmine_id", header: "RedmineID", title:"redmine_id", valueClass:"spanclass"},
+                    {width: 110, cellClass: "col1", value: "priority", header: "优先级", title:"priority", valueClass:"spanclass"},
                 ],
                 resizable:true,
                 draggable:false,
