--- a/project.html
+++ b/project.html
@@ -60,15 +60,16 @@
 <script type="text/javascript">
     function LoadData(data) {
         var tree = $("div#jstree").bind("loaded_grid.jstree",function(){
-            $("span#status").text("loaded");
+            console.log("加载树");
         });
         tree.on("select_cell.jstree-grid",function (e,data) {
-            $("span#clicked").html("clicked "+data.column+" of value "+data.value);
+            console.log("点击表格单元");
         });
         tree.on('update_cell.jstree-grid',function (e,data) {
-            $("span#changed").html("changed "+data.col+" from "+data.old+" to "+data.value);
+            console.log("树节点被修改");
         });
         tree.on('select_node.jstree', function(e, data) {
+            console.log("点击树节点");
             var path = $("#jstree").jstree(true).get_path(data.node, "/");
             var val10 = data.node.data.val10;
             $("#path_div").html(path + "<br>" + val10);
@@ -107,11 +108,11 @@
                 drag_finish : function () {
                 },
                 drag_check : function (data) {
-                return {
-                    after : true,
-                    before : true,
-                    inside : true
-                };
+                    return {
+                        after : true,
+                        before : true,
+                        inside : true
+                    };
                 }
             }
         })
